# Android-CMake-VisualStudio-Sample

./: .gitignore  CMakeLists.txt  GenerateVisualStudioProject.bat  README.md
AndroidPackaging/: .gitignore  AndroidPackaging.androidproj  build.gradle.template
AndroidPackaging/app/: build.gradle.template  release-key.keystore
AndroidPackaging/app/src/main/: AndroidManifest.xml.template
AndroidPackaging/app/src/main/res/values/: strings.xml
Source/: main.cpp
